# Potential-Evapotranspiration

./: .env.example  README.md  pyproject.toml
src/: 00_Daily_ETo.ipynb  01_Monthly_ETo.ipynb  02_Monthly_Daily_ETo.ipynb  03_ٍExport_ETo.ipynb
